# smartgo

./: .gitignore  LICENSE  README.md
.github/workflows/: azure-static-web-apps-brave-grass-0aaead40f.yml  build-image.yml  google-cloudrun-docker.yml
gtfs-to-sqlite/: Cargo.toml
gtfs-to-sqlite/src/: gen_train_stops_db.rs  gtfs_to_db.rs  lib.rs  main.rs
smartGO-api/: .dockerignore  Cargo.toml  README.md  app.db  azure.md  dockerfile
smartGO-api/api-testing/smartGO/: bruno.json  get all routes.bru  get all stops.bru  get route from stop.bru  get stop times.bru  get stops from route.bru  get stops.bru  search for stop.bru
smartGO-api/src/: db_provider.rs  handlers.rs  main.rs  models.rs  route.rs
smartGO-api/src/ext_api/: go_api.rs  mod.rs  response_structs.rs
smartGO-ui/: .dockerignore  README.md  package-lock.json  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.ts  theme.ts
smartGO-ui/src/lib/: api.ts  models.ts  utils.ts
smartGO-ui/src/routes/: +layout.svelte  +page.svelte  +page.ts
smartGO-ui/src/routes/route/: +page.svelte  +page.ts
smartGO-ui/src/routes/route/[routeId]/: +page.svelte  +page.ts
smartGO-ui/src/routes/route/[routeId]/stop/[stopId]/: +page.svelte  +page.ts
smartGO-ui/src/routes/routes/: +page.svelte
smartGO-ui/src/routes/stop/: +page.svelte
smartGO-ui/src/routes/stop/[slug]/: +page.svelte  +page.ts
smartGO-ui/src/routes/stopTime/: +page.svelte
