[package]
name = "gtfs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.5.0"
chrono = "0.4.40"
reqwest = { version = "0.11", features = ["blocking"] }
rusqlite = { version = "0.30.0", features = ["bundled"] }
rustc-hash = "1.1.0"
zip = "0.6.6"
