[package]
name = "smartGO-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.76"
axum = { version = "0.7.2", features = [ "json", "macros", "query" ] }
dotenvy = "0.15.7"
mini-moka = "0.10"
reqwest = { version = "0.11.23", default-features = false, features = [ "json", ]}
rustc-hash = "1.1.0"
serde = { version = "1.0.193", features = [ "derive" ]}
serde_json = "1.0.108"
serde_with = "3.4.0"
sqlx = { version = "0.7.3", features = [ "sqlite", "runtime-tokio", "json", "macros", ]}
tokio = { version = "1.35.1", features = [ "macros", "rt-multi-thread", "sync", "time" ] }
tower-http = {version = "0.5.0", features = [ "cors" ]}
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
